src/tests/code/pass/pass_assignment.u
entrypoint:~()
{
	foo:~i64{42};
	
	foo := 65;
}
->(foo)