src/tests/code/fail/fail_chained_assignment.u
entrypoint:~()
{
	foo:~i64{42};
	bar:~i64{1};
	baz:~i64{2};
	
	foo := bar := baz := 65;	// Chained assignment is not allowed
}
->(foo)